# hotdog

./: Cargo.toml  Dockerfile  README.md  dogs.txt
assets/: main.css
src/: backend.rs  favorites.rs  main.rs  nav.rs  view.rs
src/components/: favorites.rs  view.rs
